firefox manifest compatability

--- a/public/popup.html
+++ b/public/popup.html
@@ -1,14 +1,12 @@
 <!DOCTYPE html>
 <html>
+  <head>
+    <title>VC bots finder</title>
+    <meta charset="utf-8" />
+  </head>
 
-<head>
-    <title>Chrome Popup</title>
-    <meta charset="utf-8">
-</head>
-
-<body>
+  <body>
     <div id="popup"></div>
     <script src="popup.js"></script>
-</body>
-
+  </body>
 </html>
